<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.donny.appstatistic.LoginActivity">

    <ImageView
        android:id="@+id/ig_wallpaper"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/low_poly_wallpaper" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ig_wallpaper"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/hints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/prompt_input"
            android:textColor="#000000"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/idnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hints"
            android:layout_marginTop="4dp"
            android:hint="@string/prompt_idmunber"
            android:maxLines="1"
            android:inputType="number"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@id/idnumber"
            android:paddingBottom="5dp"
            android:text="@string/login_tip"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tip"
            android:paddingBottom="5dp"
            android:paddingLeft="11dp"
            android:paddingRight="11dp"
            android:text="@string/login_tip_detail"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tip2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/detail"
            android:paddingBottom="5dp"
            android:text="@string/login_tip2"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/detail2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tip2"
            android:layout_marginBottom="30dp"
            android:paddingBottom="5dp"
            android:paddingLeft="11dp"
            android:paddingRight="11dp"
            android:text="@string/login_tip2_detail"
            android:textSize="18sp" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:text="确认"
            android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>
